fixed the spacing problem of table

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -250,7 +250,7 @@ input[type="number"] {
 
 
 .MuiTable-root  {
-/* table-layout: auto !important; */
+table-layout: auto !important;
 }
 
 .form-control {
